--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "npmlog": "^2.0.3"
   },
   "peerDependencies": {
-    "nvm-test": "^1.0.0-rc"
+    "nvm-test": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
