--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.0-beta",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
