--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "nvm-test-command-travis",
+  "name": "nvm-test-plugin-travis",
   "version": "0.0.3",
-  "description": "Travis command for `nvm-test`",
+  "description": "Travis plugin for `nvm-test`",
   "main": "dist/command.js",
   "scripts": {
     "install:peer": "npm install $(node ./scripts/peerDependencies.js)",
-    "link:self": "npm link && npm link nvm-test-command-travis",
-    "unlink:self": "npm unlink nvm-test-command-travis && npm unlink nvm-test-command-travis -g",
-    "prestart": "npm run link:self && npm run build:dist",
+    "link:self": "npm link && npm link nvm-test-plugin-travis",
+    "unlink:self": "npm unlink nvm-test-plugin-travis && npm unlink nvm-test-plugin-travis -g",
+    "prestart": "npm run link:self && npm run build:lib",
     "start": "NODE_ENV=development nvm-test",
     "poststart": "npm run unlink:self",
     "prebuild": "npm run lint && npm run test",
-    "build": "npm run build:dist",
-    "build:dist": "rimraf dist; NODE_ENV=production babel ./src -d ./dist",
-    "lint": "eslint ./",
+    "build": "npm run build:lib",
+    "build:lib": "rimraf lib && NODE_ENV=production babel ./src -d ./lib",
+    "lint": "eslint .",
     "test": "npm run coverage",
     "test:only": "mocha --compilers js:babel-core/register --recursive",
     "coverage": "rimraf coverage && istanbul cover _mocha -- -R spec --compilers js:babel-core/register --recursive",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sylvaindethier/nvm-test-command-travis.git"
+    "url": "https://github.com/sylvaindethier/nvm-test-plugin-travis.git"
   },
   "keywords": [
     "travis",
@@ -32,27 +32,24 @@
   "author": "Sylvain Dethier",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sylvaindethier/nvm-test-command-travis/issues"
+    "url": "https://github.com/sylvaindethier/nvm-test-plugin-travis/issues"
   },
-  "homepage": "https://github.com/sylvaindethier/nvm-test-command-travis#readme",
+  "homepage": "https://github.com/sylvaindethier/nvm-test-plugin-travis#readme",
   "engines": {
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.6.1",
     "js-yaml": "^3.5.5",
     "npmlog": "^2.0.3"
   },
   "peerDependencies": {
-    "nvm-test": "^1.0.0"
+    "nvm-test": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
-    "babel-eslint": "^6.0.0-beta",
-    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-eslint": "^6.0.0",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0",
     "eslint": "^2.4.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.1.0",
